# footbowls

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-how-to.ipynb  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/footbowls/: __init__.py  footbowls.py
tests/: test_footbowls.py
