[tool.poetry]
name = "footbowls"
version = "0.1.0"
description = "A python package for the API-Football API"
authors = ["Zhenaya Albertina"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
